<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>5</version>
        <relativePath/>
    </parent>
    <groupId>com.github.jbellis</groupId>
    <artifactId>jamm</artifactId>
    <packaging>jar</packaging>
    <version>0.3.5</version>
    <name>Java Agent for Memory Measurements</name>
    <description>
        Jamm provides MemoryMeter, a java agent to measure actual object memory use including JVM overhead.
    </description>
    <url>https://github.com/jbellis/jamm/</url>
    <scm>
        <connection>scm:git:git://github.com/jbellis/jamm.git</connection>
        <url>https://github.com/oaplatform/jamm/tree/master/</url>
    </scm>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/oaplatform/jamm/issues</url>
    </issueManagement>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <developers>
        <developer>
            <id>stephenc</id>
            <name>Stephen Connolly</name>
            <roles>
                <role>publisher</role>
            </roles>
        </developer>
        <developer>
            <id>jbellis</id>
            <name>Jonathan Ellis</name>
            <roles>
                <role>architect</role>
            </roles>
        </developer>
        <developer>
            <id>belliottsmith</id>
            <name>Benedict Elliott Smith</name>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>mebigfatguy</id>
            <name>Dave Brosius</name>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>mshuler</id>
            <name>Michael Shuler</name>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    <build>
        <sourceDirectory>${basedir}/src</sourceDirectory>
        <testSourceDirectory>${basedir}/test</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.4.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.8</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.13</source>
                    <target>1.13</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Premain-Class>org.github.jamm.MemoryMeter</Premain-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkMode>pertest</forkMode>
                    <argLine>-javaagent:${project.build.directory}/${project.build.finalName}.${project.packaging}
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
